# Matematicas-discretas

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  Teorema_chino_del_residuo.c  euclides_extendido.c  main.c
Discretas/: Discretas.c  discretas.h
Discretas/Teoria_de_conjuntos/: CMakelists.txt  Teoria_de_conjuntos.h
Discretas/Teoria_de_grafos/: Teoria_de_grafos.c  Teoria_de_grafos.h
Discretas/Teoria_de_numeros_enteros/: CMakeLists.txt  Teoria_de_numeros_enteros.c  Teoria_de_numeros_enteros.h
Project1/: Project1.sln  Project1.vcxproj
lib/Teoria_de_conjuntos/: CMakelists.txt  Teoria_de_conjuntos.c
lib/Teoria_de_grafos/: CMakeLists.txt
lib/Teoria_de_numeros_enteros/: CMakeLists.txt  Teoria_de_numeros_enteros.c  Teoria_de_numeros_enteros.h
lib/common/: CMakeLists.txt  common.c
